@@ -50,6 +50,7 @@ type context = {
 	mutable debug : bool;
 	mutable verbose : bool;
 	mutable foptimize : bool;
+	mutable dead_code_removal : bool;
 	mutable platform : platform;
 	mutable std_path : string list;
 	mutable class_path : string list;
@@ -85,6 +86,7 @@ let create v =
 		debug = false;
 		verbose = false;
 		foptimize = true;
+		dead_code_removal = false;
 		platform = Cross;
 		std_path = [];
 		class_path = [];
